@@ -1536,7 +1536,8 @@ Reasoner reasoner = new GenericRuleReasoner(rules);</pre>
     </td>
     <td width="59%"> 
       <div align="left">Test if x is &lt;, &gt;, &lt;= or &gt;= y. Only passes 
-        if both x and y are numbers (can be integer or floating point).</div>
+        if both x and y are numbers or time instants (can be integer or 
+floating point or XSDDateTime).</div>
     </td>
   </tr>
   <tr> 
@@ -1800,7 +1801,7 @@ while (i.hasNext()) {
 <hr>
 <p>
   <i>Author: Dave Reynolds<br>
-  Last modification: $Id: index.html,v 1.14 2003-09-29 20:49:11 der Exp $</i>
+  Last modification: $Id: index.html,v 1.15 2004-01-30 13:10:09 der Exp $</i>
 </p>
 </body>
 </html>
